--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,11 @@ collections_dir: .
 collections:
     articles:
       output: true
+
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
+  - jekyll-include-cache
