--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,11 @@ collections_dir: .
 collections:
     articles:
       output: true
+      
+name: rip
+
+site:
+    name: rip.ke
 
 plugins:
   - jekyll-paginate
